# knowledge-graph-climate-cases

./: .gitignore  README.md  create_nodes_entities copy.ipynb  create_nodes_entities.py  graph.ipynb  main.py  pyproject.toml
data/: Global-Cases-Export-2024-09-25.csv
graph_data/: chunk_nodes.pkl  chunk_nodes_sample.pkl  entity_nodes.pkl  entity_nodes_sample.pkl
hello-memgraph/: clear_graph.py  main.py  memgraph_notes.py  queries.cy
notebooks/: test.ipynb
