[tool.poetry]
name = "graph"
version = "0.1.0"
description = ""
authors = ["Meg Patakota <meg.patakota@mishcon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
gliner = "^0.2.13"
tqdm = "^4.66.5"
gliner-spacy = "^0.0.10"
spacy = "^3.8.2"
setuptools = "^75.1.0"
wheel = "^0.44.0"
jupyter = "^1.1.1"
ipywidgets = "^8.1.5"
neo4j = "^5.25.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
